# Voxel-Engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  ubuntu-deps.sh
cmake/: Findglfw3.cmake
common/: camera.h  shader.h
dependencies/glad/: glad.h
deprecated/: main.cpp  perlin_gen.h
docs/: docs.md  todo.md
include/: perlin_gen.h  utils.h
include/glad/: glad.h
shaders/: fragment.glsl  light_vertex.glsl  vertex.glsl
src/: config.h  glad.c  main.cpp  std_image.cpp  utils.cpp
src/core/: application.cpp  application.hpp
src/input/: camera.cpp  camera.h  camera.hpp
src/noise/: perlin_gen.cpp  perlin_gen.hpp
src/noise/deprecated/: perlin_gen.cpp  perlin_gen.hpp
src/render/: depth_map.cpp  depth_map.hpp  shader.h  skybox.cpp  skybox.hpp
src/shaders/: depth_fragment.glsl  depth_vertex.glsl  fragment.glsl  fragment.txt  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
src/shapes/: rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
src/utils/: utils.h
src/world/: chunk.h  chunk_gen.cpp  chunk_gen.hpp
